--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,149 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+:root {
+	--mdc-theme-primary: #82B1FF;
+  --slider-color: #82B1FF;
 }
 
-a {
-  color: #00B7FF;
+.card-outer {
+	margin: 24px;
+}
+
+.card-content {
+	padding-top: 24px;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-bottom: 12px;
+}
+
+.question-responses {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.question-block {
+  margin-bottom:12px;
+}
+
+@keyframes spinner-border {
+  to { transform: rotate(360deg); }
+} 
+.spinner-border{
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    vertical-align: text-bottom;
+    border: .25em solid currentColor;
+    border-right-color: transparent;
+    border-radius: 50%;
+    -webkit-animation: spinner-border .75s linear infinite;
+    animation: spinner-border .75s linear infinite;
+}
+.spinner-border-sm{
+    height: 1rem;
+    width: 1rem;
+    border-width: .2em;
+}
+/*
+#navBuffer {
+	margin-bottom:3.5rem;
+}
+
+@media (min-width : 600px) {
+	#navBuffer {
+		margin-bottom: 4rem
+	}
+	
+}*/
+
+
+.smart-scroll{
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  background-color: white;
+}
+.scrolled-down{
+   transform:translateY(-100%); transition: all 0.3s ease-in-out;
+}
+.scrolled-up{
+   transform:translateY(0); transition: all 0.3s ease-in-out;
+}
+
+.app-body{
+	padding-top: .3rem;
+}
+
+#journal > * {
+	margin: 1rem;
+}
+
+@media (min-width : 900px) {
+	#journal > #journalPrompt{
+		text-align: center;
+	}
+	
+}
+
+.not-selected {
+  opacity: .5;
+  cursor: pointer;
+}
+
+
+/*Slider*/
+.slidecontainer {
+  width: 100%;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; 
+  background: var(--slider-color, #6200ee);
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--slider-color, #6200ee);
+  cursor: pointer;
+}
+
+
+.footer {
+  position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    line-height: 15px;
+    background-color: #f5f5f5;
+    color: #4d4d4d;
+}
+
+.slow .toggle-group { transition: left 0.65s; -webkit-transition: left 0.65s; }
+
+.toggle-handle {
+  background-color: white ;
 }
